src/app/birthday/birthday-list/birthday-list.component.scss
@import '../../styles/master/colors.scss';
@import '../../styles/master/mixins.scss';
@import '../../styles/master/fonts.scss';


.base {
    padding: 15px;
    background-color: $backgroundMasterColor;
    color: #ffffff;

    .remindersNav {
        margin: auto;
        height: 50px;
        width: 70%;
        display: flex;
        justify-content: center;
        align-items: center;
        text-align: center;
        
        // border: 2px $brandBlueColorMedium solid;
        // border-radius: 7px;

        .mixin-h5 {
           font-size: $h5;
        }

        .searchBar {
            align-items: center;
            position: relative;

            input {
                background-color: $backgroundMasterColor;
                border-radius: 7px;
                border: 2px $brandBlueColorMedium solid;
                color: #ffffff;
                width: 100%;
                height: 43px;
                padding: 0px 30px;
                outline: 0; 
                cursor: pointer;
                transition: 0.4s;

                &:focus {
                    border: 2px $brandLightColor solid;
                }
            }

            i {
                position: absolute;
                top: 50%;
                left: 20px;
                transform: translateY(-50%); 
                cursor: pointer;
            }
        }

        .btn-filter {
            padding: 0;
            border: none;
            background: none;
            font-size: $h5;
            color: #ffffff;
            transition: 0.3s;
            @include brandLightHover;

            display: flex;
            align-items: center;

            svg {
                width: $h5;
            }
        }
    }
    
    .container-fluid{
        padding: 21px;
    
        .birthdayList {
            margin: auto;
            width: 907px;

            position: relative;

            .birthdayItem {
                display: flex;
                justify-content: left;
                align-items: center;

                width: 100%;
                margin: auto;
                margin-bottom: 29px;
                padding: 15px 30px 15px 30px;

                background-color: $reminderColor;
                border: 3px $brandBlueColorMedium solid;
                border-radius: 16px;
                
                cursor: pointer;
                transition: 0.3s;

                font-size: $h5;

                &:hover {
                    background-color: $reminderColorHover;
                }

                svg {
                    width: 24px;
                    color: $brandBlueColor;
                    margin-right: 15px;
                }

                span {
                    margin-right: 7px;
                }

                a {
                    display: flex;
                    margin-left: auto;
                    
                    svg {
                    color: #ffffff;
                    transition: 0.3s;
                    margin-right: 0;

                        &:hover {
                            color: $brandBlueColor;
                        }
                    }
                }
            }

            .options {
                display: flex;
                flex-direction: column;
                justify-content: space-around;
                align-items: flex-start;

                position: absolute;
                z-index: 1;
                right: -68px;
                top: 46px;

                width: 120px;
                height: 89px;
                font-size: $p;
                background-color: $reminderColorSecondary;
                backdrop-filter: blur(10px);
                border-radius: 16px;
                filter: drop-shadow(5px 5px 4px #000000);
                // filter: drop-shadow(0 0 0.35rem #000000);
                
                .option {
                    display: flex;
                    align-items: center;
                    width: 100%;
                    height: 100%;

                    transition: 0.3s;
                    padding-left: 10px;
                    border-radius: 16px;
                    
                    i {
                        margin-right: 10px;
                    }

                    &:hover {
                        background-color: $reminderColorSecondaryHover;
                    }
                }
            }
        }
    }
    
}

